1. 增加auth服务适配器 2. 调整模块结构，后续加入api对内接口